# Neural_Network_Trading_Algo

./: 2024_06_30_19_16_58_new_data_with_positions.csv  2024_06_30_19_16_58_stock_price_prediction_model_epochs_50.keras  2024_06_30_19_27_58_new_data_with_positions.csv  2024_06_30_19_27_58_stock_price_prediction_model_epochs_50.keras  2024_06_30_19_28_50_new_data_with_positions.csv  2024_06_30_19_28_50_stock_price_prediction_model_epochs_50.keras  2024_06_30_19_30_04_new_data_with_positions.csv  2024_06_30_19_30_04_stock_price_prediction_model_epochs_50.keras  LICENSE  Makefile  README.md  SignalStrategy.html  ^STI_data_end_2017-01-03_start_2010-01-01.csv  main.ipynb  pyproject.toml  requirements.txt
docs/: mkdocs.yml
models/: 2024_06_30_18_04_02_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_07_31_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_08_13_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_08_45_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_10_28_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_13_15_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_13_44_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_14_36_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_23_09_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_23_35_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_25_53_stock_price_prediction_model_epochs_50.keras  2024_06_30_18_39_44_stock_price_prediction_model_epochs_50.keras  2024_07_01_11_50_38_stock_price_prediction_model_epochs_50.keras  (+7 more)
(+33 files in other folders)
